Remove overflow: auto from container to avoid scrollbars where redundant

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,37 +1,36 @@
 *, *::before, *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: $paragraph-text;
-    font-size: $basic-font-size * 1.3;
-    line-height: 1.7;
-    background-color: $main-lighten-color;
-    font-weight: 300;
-    text-align: center;
+  font-family: $paragraph-text;
+  font-size: $basic-font-size * 1.3;
+  line-height: 1.7;
+  background-color: $main-lighten-color;
+  font-weight: 300;
 }
 
 .container {
-    margin: 0 auto;
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    max-width: 1170px;
-    overflow: auto;
+  margin: 0 auto;
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  max-width: 1170px;
+  text-align: center;
 }
 
 .container-fluid {
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px; 
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px; 
 }
 
 .row {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 main {
-    margin: 60px 0 0 200px;
-    transition: $transition-general;
+  margin: 80px 0 30px 200px;
+  transition: $transition-general;
 }
